# stropha

./: .env.example  .gitignore  .mcp.example.json  .ragignore  .strophaignore  CLAUDE.md  README.md  REVIEW_LOG.md  ROADMAP.md  opencode.json  pyproject.toml
docs/architecture/: rag-graphify-integration.md  rag-system.md  stropha-graphify-integration.md  stropha-pipeline-adapters.md  stropha-system.md
docs/guides/: mcp-integration.md  performance.md  troubleshooting.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
src/mimoria_rag/: __init__.py  cli.py  config.py  errors.py  logging.py  server.py
src/mimoria_rag/embeddings/: base.py  local.py
src/mimoria_rag/ingest/: __init__.py  chunker.py  walker.py
src/mimoria_rag/ingest/chunkers/: ast_generic.py  base.py  fallback.py  gherkin.py  markdown.py  vue.py
src/mimoria_rag/retrieval/: rrf.py  search.py
src/mimoria_rag/storage/: __init__.py  sqlite.py
src/stropha/: __init__.py  cli.py  config.py  cost.py  errors.py  models.py  server.py  watch.py
src/stropha/adapters/: __init__.py
src/stropha/adapters/chunker/: __init__.py  tree_sitter_dispatch.py
src/stropha/adapters/chunker/languages/: __init__.py  ast_generic.py  file_level.py  heading_split.py  regex_feature_scenario.py  sfc_split.py
src/stropha/adapters/embedder/: __init__.py  bge_m3.py  local.py  mlx.py  voyage.py
src/stropha/adapters/enricher/: __init__.py  contextual.py  graph_aware.py  hierarchical.py  mlx.py  noop.py  ollama.py
src/stropha/adapters/retrieval/: hybrid_rrf.py
src/stropha/adapters/retrieval/reranker/: __init__.py  cross_encoder.py  noop.py
src/stropha/adapters/storage/: sqlite_vec.py
src/stropha/adapters/walker/: __init__.py  filesystem.py  git_diff.py  git_ls_files.py  nested_git.py
src/stropha/embeddings/: __init__.py  base.py  factory.py  local.py  voyage.py
src/stropha/eval/: __init__.py  harness.py
src/stropha/inference/: __init__.py  backend.py  mlx_backend.py  ollama_backend.py
src/stropha/ingest/: anchors.py  chunker.py  git_meta.py  glossary.py  graph_vec_loader.py  graphify_loader.py  manifest.py  pipeline.py  walker.py
src/stropha/ingest/chunkers/: __init__.py  base.py
src/stropha/pipeline/: __init__.py  base.py  builder.py  config.py  pipeline.py  registry.py
src/stropha/retrieval/: __init__.py  cache.py  graph.py  hyde.py  multi_query.py  query_decomposition.py  query_rewrite.py  query_router.py  recursive.py  search.py  smart_search.py
src/stropha/stages/: __init__.py  chunker.py  embedder.py  enricher.py  reranker.py  retrieval.py  retrieval_stream.py  storage.py  walker.py
src/stropha/storage/: sqlite.py
src/stropha/tools/: __init__.py  hook_install.py
tests/: test_query_decomposition.py  test_query_router.py
tests/eval/: golden.jsonl  mimoria_golden.jsonl
tests/unit/: test_anchors.py  test_chunker.py  test_contextual_enricher.py  test_cost.py  test_enricher_adapters.py  test_eval_harness.py  test_fts_augment.py  test_git_diff_walker.py  test_git_meta.py  test_glossary.py  test_graph_aware_enricher.py  test_graph_tools.py  test_graph_vec.py  test_graphify_loader.py  test_hook_install.py  test_hyde_and_recursive.py  test_inference_backend.py  test_manifest.py  test_mcp_server.py  test_mlx_enricher.py  test_multi_query.py  test_ollama_enricher.py  test_phase2_adapters.py  test_phase3_chunker.py  test_phase4_retrieval_streams.py  test_pipeline_drift.py  test_pipeline_framework.py  test_pipeline_incremental.py  test_pipeline_multirepo.py  test_query_cache.py  test_query_intelligence.py  test_reranker.py  test_rrf.py  test_search_filters.py  test_storage.py  test_walker.py  test_walker_variants.py  test_watch_and_bge_m3.py
(+5 files in other folders)
